--- a/src/App.css
+++ b/src/App.css
@@ -251,7 +251,7 @@ h1{
   left: 505px;
   background-color: #FFE1D2;
   bottom: 0px;
-  color: red;
+  color: orangered;
   width: 40px;
   height: 47px;;
   /* color: black; */
